# jit-liquidity-rust

./: .gitignore  .gitmodules  .pre-commit-config.yaml  Cargo.toml  README.md  run-tests.sh
.github/workflows/: rust.yml  solidity.yml
contracts/: remappings.txt
contracts/lib/forge-std/: CONTRIBUTING.md  foundry.toml
contracts/script/: ExecutorDeploy.sol
contracts/src/: Executor.sol  FundManager.sol  IERC20Token.sol  IUniswapV2Pair.sol  IUniswapV2Router.sol  Oracle.sol  UniswapV3Helper.sol  UniswapV3HelperInterface.sol  Whitelist.sol
contracts/src/interfaces/: IExecutor.sol  IFundManager.sol  IOracle.sol
contracts/test/: DummyTest.t.sol  ExecutorTest.t.sol  FundManagerTest.t.sol  Oracle.t.sol  WhitelistTest.t.sol
examples/: flashbot_mev.rs  monitor_public_txs.rs  uniswap_v2_token_swap.rs
src/: config.rs  lib.rs  main.rs  rpc.rs  testconfig.rs  wallet.rs
src/config/: config.rs  mod.rs  runconfig.rs  testconfig.rs  testnetconfig.rs
src/flashbots_share/: bundle_forwarder.rs  bundler.rs  extraction.rs  jit_bundler.rs  mev.rs  mod.rs  sandwich_bundler.rs  uniswapv3_extraction.rs
src/interfaces/: erc20.rs  executor.rs  mod.rs  router02.rs  router02interface.rs
src/providers/: alchemy.rs
src/simulation/: engine.rs  engine_filter.rs  mod.rs  tracing.rs
src/uniswap/: router.rs  router02.rs  router02interface.rs
src/utils/: addresses.rs  blockchain_utils.rs  mod.rs  setup.rs  utils.rs  wallet.rs
src/watcher/: membuilder.rs  mempool.rs  mod.rs  shutdownconfig.rs  subscribe.rs  subscribe_filter.rs  subscribefilter.rs
tests/: .python-version  encode.py
(+6 files in other folders)
