[package]
name = "jit-liquidity-rust"
version = "0.2.0"
edition = "2021"

[dependencies]
tokio = { version = "1", features = ["full"] }
eyre = "0.6"
dotenv = "0.15.0"
alloy = { version = "0.7.3", features = ["full", "node-bindings", "rpc-types-trace", "rpc-types-debug"] }
futures-util = "0.3"
revm = { version = "19.0.0", features = ["alloydb"] }
