[package]
name = "jit-liquidity-rust"
version = "0.2.0"
edition = "2021"

[dependencies]
alloy = { version = "0.7.3", features = ["full", "node-bindings", "rpc-types-trace", "rpc-types-debug", "rpc-types-mev"] }
alloy-mev = { git = "https://github.com/scaraven/alloy-mev", branch = "main" }
dotenv = "0.15.0"
eyre = "0.6"
foldhash = "0.1.4"
futures-util = "0.3"
revm = { version = "19.1.0", features = ["alloydb"] }
tokio = { version = "1", features = ["full"] }
tokio-stream = "0.1.0"
